# markov

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
bayes/: 01-derivation.ipynb  02-inference.ipynb  03-tanks.ipynb  04-tokens.ipynb
hidden-markov/: 01 definitions.ipynb  02 likelihood.ipynb  02-01 profiling.ipynb  03 decoding.ipynb  04 learning.ipynb  algorithms.py  coefficients.py  markov.py
markov/: image_prep.ipynb  images.ipynb  markov-chain-01.ipynb  markov-chain-02.ipynb
poison/: __main__.py  hilbert_image.py  variable_chain.py
poison/templates/: main.html  page.html
texts/: README.md
