[project]
name = "markov"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.1",
    "hilbertcurve>=2.0.5",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "nbformat>=5.10.4",
    "pillow>=12.0.0",
    "plotly>=6.3.1",
    "tabulate>=0.9.0",
    "uvicorn>=0.38.0",
]


[dependency-groups]
dev = ["mypy>=1.18.2"]
